--- a/resources/assets/app/html/games/index.html
+++ b/resources/assets/app/html/games/index.html
@@ -22,9 +22,6 @@
                     <div class="info">
                         <!--<img ng-src="{{ gameUser.user.avatarUrl() }}" style="max-height: 40px; position: absolute; left: 0" />-->
                         <div class="name">{{ gameUser.user.name }}</div>
-                        <div class="rating-delta {{ gameUser.userPointsClass() }}">
-                            {{ gameUser.getDelta() }}
-                        </div>
                         <div>
                             {{ gameUser.rating_before }}
                             <i class="fa fa-long-arrow-right"></i>
@@ -33,41 +30,38 @@
                     </div>
                     <div class="user-avatar" back-img="{{ gameUser.user.avatarUrl() }}">
                         <img ng-src="{{ gameUser.user.avatarUrl() }}" />
-                        <div class="stat">
-                            <span class="wins">{{ gameUser.user.count_wins }}</span> /
-                            <span class="loses">{{ gameUser.user.count_looses }}</span>
+                        <div class="rating-delta" ng-class="gameUser.userPointsClass()">
+                            {{ gameUser.getDelta() }}
                         </div>
                     </div>
+                    <div class="align-helper"></div>
                 </div>
             </div>
             <div class="result-container main">
                 <div class="versus">VS</div>
                 <div class="result">
-                    <div class="point {{ game.gamePointClass() }}">{{ game.team_a_points }}</div>
+                    <div class="point" ng-class="game.gamePointClass()">{{ game.team_a_points }}</div>
                     <div class="point">&thinsp;:&thinsp;</div>
-                    <div class="point {{ game.gamePointClass('b') }}">{{ game.team_b_points }}</div>
+                    <div class="point" ng-class="game.gamePointClass('b')">{{ game.team_b_points }}</div>
                 </div>
             </div>
             <div class="team team-b">
                 <div class="team-user" ng-repeat="gameUser in game.games_users_b">
                     <div class="user-avatar" back-img="{{ gameUser.user.avatarUrl() }}">
                         <img ng-src="{{ gameUser.user.avatarUrl() }}" />
-                        <div class="stat">
-                            <span class="wins">{{ gameUser.user.count_wins }}</span> /
-                            <span class="loses">{{ gameUser.user.count_looses }}</span>
+                        <div class="rating-delta" ng-class="gameUser.userPointsClass()">
+                            {{ gameUser.getDelta() }}
                         </div>
                     </div>
                     <div class="info">
                         <div class="name">{{ gameUser.user.name }}</div>
-                        <div class="rating-delta {{ gameUser.userPointsClass() }}">
-                            {{ gameUser.getDelta() }}
-                        </div>
                         <div>
                             {{ gameUser.rating_before }}
                             <i class="fa fa-long-arrow-right"></i>
                             {{ gameUser.rating_after }}
                         </div>
                     </div>
+                    <div class="align-helper"></div>
                 </div>
             </div>
         </div>
@@ -110,7 +104,6 @@
                 </div>
             </div>
             <div class="game-date">{{ game.played_at }}</div>
-            <div class="additional-info"></div>
         </div>
     </div>
 </div>
