--- a/resources/assets/app/html/user/profile.html
+++ b/resources/assets/app/html/user/profile.html
@@ -48,17 +48,35 @@
                     </div>
                 </div>
             </div>
+
+            <div class="form-group" ng-if="!currentPlayer.deleted">
+                <div class="col-sm-5"></div>
+                <div class="col-sm-5">
+                    <a href="javascript:void(0)" ng-click="openDialog()">Delete profile</a>
+                </div>
+            </div>
+
+            <div class="alert alert-success text-center animate-show" ng-show="showAlert">
+                Changes have been saved!
+            </div>
+
+            <div class="form-group">
+                <div class="col-sm-5"></div>
+                <div class="col-sm-5">
+                    <button class="btn btn-primary" ng-click="saveChanges(player)" ng-disabled="loading">
+                        <span ng-show="loading"><i class="fa fa-refresh fa-spin"></i>&nbsp;</span>
+                        Save
+                    </button>
+                </div>
+            </div>
         </form>
-
-        <div class="alert alert-success text-center animate-show" ng-show="showAlert">
-            Changes have been saved!
-        </div>
-
-        <div class="text-center">
-            <button class="btn btn-primary" ng-click="saveChanges(player)" ng-disabled="loading">
-                <span ng-show="loading"><i class="fa fa-refresh fa-spin"></i>&nbsp;</span>
-                Save
-            </button>
-        </div>
     </div>
 </div>
+
+<script type="text/ng-template" id="delete-confirmation">
+    Do you really want to delete your profile?
+    <div class="text-right">
+        <button class="btn btn-primary" ng-click="deletePlayer(player)">Yes</button>
+        <button class="btn btn-danger" ng-click="closeThisDialog()">No</button>
+    </div>
+</script>
