--- a/resources/assets/app/html/games/index.html
+++ b/resources/assets/app/html/games/index.html
@@ -118,10 +118,9 @@
     </div>
 </div>
 <div class="row games-pages" ng-show="gamesRepository.currentpage < gamesRepository.lastpage">
-    <button class="btn btn-primary" ng-if="gamesRepository.loading" disabled="disabled">
-        <span><i class="fa fa-refresh fa-spin"></i></span> more...
-    </button>
-    <button class="btn btn-primary" ng-if="gamesRepository.loading === false" ng-click="gamesRepository.load()">
-        <span><i class="fa fa-refresh"></i></span> more...
-    </button>
+    <md-button
+            class="md-raised md-primary"
+            ng-click="!gamesRepository.loading && gamesRepository.load()"
+            ng-disabled="gamesRepository.loading"
+    >More</md-button>
 </div>
