--- a/resources/assets/app/html/games/create.html
+++ b/resources/assets/app/html/games/create.html
@@ -8,6 +8,8 @@
                        class="form-control"
                        ng-value="game.playedAt"
                 >
+                <md-datepicker ng-model="user.submissionDate" md-placeholder="Enter date">
+                </md-datepicker>
             </div>
             <div class="game-graphic">
                 <div class="team team-a">
